--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
       "dom.iterable",
       "esnext"
     ],
+    "removeComments": false,
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
