--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "yarn tsc --watch",
+    "prepublishOnly": "yarn build",
     "build": "rimraf dist && yarn tsc"
   },
   "files": [
