--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-cognito-auth",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "Simple cognito auth for Nextjs/React",
   "main": "dist/index.js",
   "scripts": {
@@ -24,12 +24,14 @@
   "homepage": "https://github.com/laptise/next-cognito-auth#readme",
   "dependencies": {
     "amazon-cognito-identity-js": "^6.1.2",
+    "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
+    "next": "^13.2.1",
     "rimraf": "^4.1.2",
     "typescript": "^4.9.5"
   }
